--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "concat-files": "^0.1.1",
+    "express": "^4.14.0",
     "jquery": "^3.1.1",
     "postcss": "^5.2.8",
     "postcss-import": "^9.0.0",
@@ -21,6 +22,7 @@
     "propertiesjs": "^1.6.0",
     "redom": "^1.8.0",
     "rollup-plugin-buble": "^0.15.0",
-    "rollup-plugin-uglify": "^1.0.1"
+    "rollup-plugin-uglify": "^1.0.1",
+    "socket.io": "^1.7.2"
   }
 }
