--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "uglify": "^0.1.5"
   },
   "dependencies": {
+    "compression": "^1.6.2",
     "express": "^4.14.0",
     "socket.io": "^1.7.2"
   }
