--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rollup": "^0.38.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-preprocess": "0.0.1",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
     "uglify": "^0.1.5"
