--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "compression": "^1.6.2",
+    "deep-strict-equal": "^0.2.0",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
     "p2": "^0.7.1",
