--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "deep-strict-equal": "^0.2.0",
     "express": "^4.14.0",
     "lodash": "^4.17.4",
+    "mysql2": "^1.4.2",
     "socket.io": "^1.7.2"
   }
 }
