--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "postinstall": "cp installation/configLocal.js config.js",
     "build": "node autobuild all",
     "dev": "node autobuild",
     "server": "node server",
@@ -12,6 +13,7 @@
   "devDependencies": {
     "chokidar": "^1.6.1",
     "concat-files": "^0.1.1",
+    "deep-strict-equal": "^0.2.0",
     "glob": "^7.1.1",
     "jquery": "^3.1.1",
     "kexec": "^3.0.0",
@@ -30,9 +32,7 @@
   },
   "dependencies": {
     "compression": "^1.6.2",
-    "deep-strict-equal": "^0.2.0",
     "express": "^4.14.0",
-    "lodash": "^4.17.4",
     "mysql2": "^1.4.2",
     "socket.io": "^1.7.2"
   }
