--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "compression": "^1.6.2",
     "express": "^4.14.0",
     "mysql2": "^1.4.2",
-    "sockjs": "^0.3.18"
+    "socket.io": "^2.0.3"
   }
 }
