--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "node autobuild all",
     "dev": "node autobuild",
     "server": "node server",
-    "clean": "rm -f builds/openeditplay* && rm -f public/openeditplay* && rm -f public/play/openeditplay* && rm -f public/play/css/openeditplay* && rm -f public/edit/openeditplay* && rm -f public/edit/css/openeditplay*"
+    "clean": "./scripts/clean"
   },
   "devDependencies": {
     "chokidar": "^1.6.1",
