--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "build": "node autobuild all",
     "dev": "node autobuild",
     "server": "node server",
-    "clean": "./scripts/clean"
+    "clean": "./scripts/clean",
+    "flow": "flow"
   },
   "devDependencies": {
     "chokidar": "^1.6.1",
     "concat-files": "^0.1.1",
     "deep-strict-equal": "^0.2.0",
+    "flow-bin": "^0.76.0",
     "glob": "^7.1.1",
     "jquery": "^3.1.1",
     "kexec": "^3.0.0",
@@ -24,16 +26,18 @@
     "redom": "^1.8.0",
     "rollup": "^0.38.0",
     "rollup-plugin-buble": "^0.15.0",
+    "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-preprocess": "0.0.1",
+    "rollup-plugin-typescript": "^0.8.1",
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^3.2.2",
     "uglify": "^0.1.5"
   },
   "dependencies": {
-    "compression": "^1.6.2",
-    "express": "^4.14.0",
+    "compression": "^1.7.2",
+    "express": "^4.16.3",
     "mysql2": "^1.4.2",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.1.1"
   }
 }
