experimenting with typescript and rollup

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "node autobuild",
     "server": "node server",
     "clean": "./scripts/clean",
-    "flow": "flow"
+    "flow": "flow",
+    "build-editor": "rollup -c -i src/editor/main.ts -o builds/openeditplay.editor.js"
   },
   "devDependencies": {
     "chokidar": "^1.6.1",
@@ -17,23 +18,28 @@
     "deep-strict-equal": "^0.2.0",
     "flow-bin": "^0.76.0",
     "glob": "^7.1.1",
+    "http-server": "^0.11.1",
     "jquery": "^3.1.1",
     "kexec": "^3.0.0",
     "postcss": "^5.2.8",
     "postcss-import": "^9.0.0",
     "postcss-scss": "^0.4.0",
     "precss": "^1.4.0",
-    "rollup": "^0.38.0",
+    "rollup": "^0.62.0",
     "rollup-plugin-buble": "^0.15.0",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-plugin-preprocess": "0.0.1",
     "rollup-plugin-typescript": "^0.8.1",
+    "rollup-plugin-typescript2": "^0.15.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "rollup-watch": "^3.2.2",
+    "rollup-watch": "^4.3.1",
+    "ts-loader": "^4.4.2",
+    "typescript": "^2.9.2",
     "uglify": "^0.1.5"
   },
   "dependencies": {
+    "@types/redom": "^3.6.0",
     "compression": "^1.7.2",
     "express": "^4.16.3",
     "mysql2": "^1.4.2",
