--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,15 @@
         //"noEmitOnError": false,
         "module": "ES6",
 
-        "target": "es5",
+        // noEmit so that "tsc" command could be used just for type checking.
+        // Actual build process overrides this
+        "noEmit": true,
+
+        "target": "ES5",
         "allowJs": true,
         "outDir": "./testDist/",
         //"strictNullChecks": true
-        "lib": ["es5", "es6", "dom"],
+        "lib": ["es7"],
         "sourceMap": true,
     },
     "include": [
