--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
         "allowJs": true,
         "outDir": "./testDist/",
         //"strictNullChecks": true
-        "lib": ["es7"],
+        "lib": ["es7", "dom"],
         "sourceMap": true,
     },
     "include": [
