--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build-editor": "rollup -c -i src/editor/main.ts -o builds/openeditplay.editor.js"
   },
   "devDependencies": {
+    "@types/redom": "^3.6.0",
     "chokidar": "^1.6.1",
     "concat-files": "^0.1.1",
     "deep-strict-equal": "^0.2.0",
@@ -35,11 +36,10 @@
     "rollup-plugin-uglify": "^1.0.1",
     "rollup-watch": "^4.3.1",
     "ts-loader": "^4.4.2",
-    "typescript": "^2.9.2",
+    "typescript": "^3.1.0-dev.20180802",
     "uglify": "^0.1.5"
   },
   "dependencies": {
-    "@types/redom": "^3.6.0",
     "compression": "^1.7.2",
     "express": "^4.16.3",
     "mysql2": "^1.4.2",
