--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chokidar": "^1.6.1",
     "concat-files": "^0.1.1",
     "deep-strict-equal": "^0.2.0",
+    "electron": "^3.0.3",
     "flow-bin": "^0.76.0",
     "glob": "^7.1.3",
     "http-server": "^0.11.1",
