--- a/package.json
+++ b/package.json
@@ -15,37 +15,32 @@
   },
   "devDependencies": {
     "@types/redom": "^3.12.0",
-    "chokidar": "^1.6.1",
+    "chokidar": "^3.0.0",
     "concat-files": "^0.1.1",
     "deep-strict-equal": "^0.2.0",
-    "electron": "^3.0.3",
-    "flow-bin": "^0.76.0",
     "glob": "^7.1.3",
-    "http-server": "^0.11.1",
+    "http-server": "^0.12.3",
     "jquery": "^3.3.1",
-    "kexec": "^3.0.0",
-    "postcss": "^5.2.18",
-    "postcss-import": "^9.0.0",
-    "postcss-scss": "^0.4.0",
-    "precss": "^1.4.0",
-    "rollup": "^0.62.0",
-    "rollup-plugin-buble": "^0.15.0",
+    "mysql2": "^2.2.5",
+    "postcss": "^8.2.1",
+    "postcss-import": "^14.0.0",
+    "postcss-scss": "^3.0.4",
+    "precss": "^4.0.0",
+    "rollup": "^2.35.1",
+    "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-node-resolve": "^2.1.1",
-    "rollup-plugin-preprocess": "0.0.1",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-typescript2": "^0.15.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-preprocess": "^0.0.4",
+    "rollup-plugin-typescript2": "^0.29.0",
     "rollup-plugin-uglify": "^1.0.2",
     "rollup-watch": "^4.3.1",
-    "ts-loader": "^4.5.0",
-    "typescript": "^3.1.0-dev.20180901",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
     "uglify": "^0.1.5"
   },
   "dependencies": {
     "compression": "^1.7.3",
     "express": "^4.16.3",
-    "mysql2": "^1.6.1",
-    "redom": "^3.12.7",
-    "socket.io": "^2.1.1"
+    "redom": "^3.12.7"
   }
 }
